--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8081
 spring.application.name=config
 
-#spring.cloud.config.server.git.uri=file://${user.home}/application-config
+spring.cloud.config.server.git.uri=file://${user.home}/application-config
 spring.cloud.config.server.git.default-label=main
 
-spring.cloud.config.server.git.uri=git@github.com:kingkongapps/application-config.git
-spring.cloud.config.server.git.username=kingkongapps
-spring.cloud.config.server.git.password=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
+#spring.cloud.config.server.git.uri=git@github.com:kingkongapps/application-config.git
+#spring.cloud.config.server.git.username=kingkongapps
+#spring.cloud.config.server.git.password=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
 
 ###
 eureka.client.region=default
